<resources>

    <string name="app_name">Hotellio</string>
    <string name="yesBtn" />
    <string name="noBtn" />
    <string name="deleteConfirm" />
    <string name="my_bookings">My Bookings</string>
    <string name="string_my_bookings" />
    <string name="hotel_name">Hotel Name</string>
    <string name="todo1">TODO</string>
    <string name="todo">TODO</string>
    <string name="location">Location</string>
    <string name="total_non_ac_rooms">Total Single Rooms</string>
    <string name="total_ac_rooms">Total Suites</string>
    <string name="facilities">Facilities</string>
    <string name="location1">Location</string>
    <string name="hotel_name1">Hotel Name</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="non_ac_room_price">Single Room Price</string>
    <string name="ac_room_price">Suite Price</string>
    <string name="todo2">TODO</string>
    <string name="upload">Upload</string>
    <string name="add_hotel_image">Add Hotel Image</string>
    <string name="booking_confirmed">Booking Confirmed</string>
    <string name="please_check_my_bookings_for_further_reference">Please check My Bookings for further reference</string>
    <string name="go_to_dashboard">Go to DashBoard</string>
    <string name="facilities1">Facilities:</string>
    <string name="book_now">Book Now</string>
    <string name="facilities2">facilities</string>

    <string-array name="position_array">
        <item>"Select"</item>
        <item>Customer</item>
    </string-array>
    <string-array name="positions_array">
        <item>Customer</item>
        <item>Admin</item>
    </string-array>

    <string-array name="roomType_array">
        <item>Suite</item>
        <item>Single room</item>
    </string-array>

</resources>