<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:background="@drawable/bg"
    android:layout_marginRight="10dp">

    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/hotelName1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="5dp"
            android:text="@string/hotel_name"
            android:textColor="#3366cc"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="0dp"
            android:layout_toRightOf="@+id/hotelName1"
            app:srcCompat="@drawable/ic_baseline_edit_24"
            android:contentDescription="@string/todo"
            tools:ignore="VectorDrawableCompat" />

        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="46dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/editButton"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_delete"
            tools:ignore="VectorDrawableCompat" />
        <TextView
            android:id="@+id/location1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/hotelName1"
            android:text="@string/location"
            android:textColor="#3366cc"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            app:srcCompat="@drawable/ic_hotel"
            tools:ignore="VectorDrawableCompat" />

        <ImageView
            android:id="@+id/imageView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView26"
            android:layout_marginTop="6dp"
            app:srcCompat="@drawable/ic_location"
            tools:ignore="VectorDrawableCompat" />


    </RelativeLayout>
</androidx.cardview.widget.CardView>